# TownPortal

./: .gitignore  CMakeLists.txt  README.md  TownPortal.esp
Meshes/TownPortal/: MAGINVTownPortal.nif  TownPortalHandFX.nif  TriggerBox.nif
Source/Scripts/: QF_TownPortalController.psc  QF_TownPortalEnterTown.psc  QF_TownPortalUpdateLocation.psc  TownPortalActivator.psc  TownPortalCastScript.psc  TownPortalDiscoveryPlayerScript.psc  TownPortalTrigger.psc  TownPortalUpdateScript.psc
